StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: java-hello-world
spec:
  serviceName: java-hello-world
  replicas: 3
  selector:
    matchLabels:
      app: java-hello-world
  template:
    metadata:
      labels:
        app: java-hello-world
    spec:
      containers:
      - name: java-hello-world
        image: 845555918361.dkr.ecr.us-west-2.amazonaws.com/java-hello-world:latest
        ports:
        - containerPort: 8080
          name: web
        readinessProbe:
          httpGet:
            path: /docker-java-app/test
            port: web
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: web
          initialDelaySeconds: 10
          periodSeconds: 20
          failureThreshold: 3
