Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hello-world
  labels:
    app: java-hello-world
spec:
  ports:
  - port: 8080
    name: web
  clusterIP: None
  selector:
    app: java-hello-world
