service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hello-world-n
  labels:
    app: java-hello-world
spec:
  type: NodePort
  ports:
  - port: 8080
    name: web
    nodePort: 32080
  selector:
    app: java-hello-world
