Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "java-hello-world-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: java-hello-world
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "java-hello-world"
              servicePort: 8080
